<resources>
    <string name="app_name">Story App</string>
    <string name="register" translatable="false">Register</string>
    <string name="background" translatable="false">background</string>
    <string name="login_with_email" translatable="false">Login with email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="signup_art" translatable="false">signup_art</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_story" translatable="false">Add Story</string>
    <string name="title_stories" translatable="false">Stories</string>
    <string name="logout">Logout</string>
    <string name="story_title" translatable="false">Story Title</string>
    <string name="story_description" translatable="false">Story Description</string>
    <string name="stories" translatable="false">Stories</string>
    <string name="welcome">Welcome To Story App</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="error" translatable="false">Error: %s. This is a bug that I don\'t know where the problem is, Please reopen the app. Sorry for the inconvenience</string>
    <string name="no_data">No Data</string>
    <string name="change_language">Change Language</string>
    <string name="title_add_friends">Add Friends</string>
    <string name="title_locations">Locations</string>
    <string name="find_friends">Find Friends</string>
    <string name="on_construction">On Construction 🛠️</string>
    <string name="stories_locations">Stories Locations</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_loc_data">Send Location Data</string>
    <string name="do_not_send_loc_data">Do Not Send Location Data</string>
    <string name="retry">Retry</string>
</resources>