<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stories"
        android:icon="@drawable/ic_stories"
        android:title="@string/title_stories" />

    <item
        android:id="@+id/navigation_add_friends"
        android:icon="@drawable/ic_add_friends"
        android:title="@string/title_add_friends"/>

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add_story" />

    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_location"
        android:title="@string/title_locations"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>