<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stories">

    <fragment
        android:id="@+id/navigation_stories"
        android:name="com.noir.storyapp.ui.main.stories.StoriesFragment"
        android:label="@string/title_stories"
        tools:layout="@layout/fragment_stories" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.noir.storyapp.ui.main.add.AddFragment"
        android:label="@string/title_add_story"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.noir.storyapp.ui.main.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>