<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:backgroundTint="@color/pastelOrange"
    app:cardCornerRadius="0dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:background="@drawable/background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/poppinsSemiBold"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:layout_marginBottom="100dp"
        android:textAllCaps="true"/>
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:backgroundTint="@color/white"
        android:outlineSpotShadowColor="@color/transparent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_email"
                style="@style/poppinsRegular"
                android:layout_gravity="center"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/pastelOrange"
                android:layout_marginTop="10dp"/>

            <com.noir.storyapp.customview.CustomEmailET
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"/>

            <com.noir.storyapp.customview.CustomPasswordET
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                style="@style/poppinsBold"
                android:backgroundTint="@color/orange"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                android:outlineSpotShadowColor="@color/transparent"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                style="@style/poppinsRegular"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    style="@style/poppinsRegular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    style="@style/poppinsBold"
                    android:layout_marginStart="1dp"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</com.google.android.material.card.MaterialCardView>