<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelOrange">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.add.AddFragment"
        android:background="@color/pastelOrange">

        <TextView
            android:id="@+id/tv_add_new_story"
            style="@style/poppinsSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/add_story"
            android:textSize="18sp"
            android:layout_marginVertical="20dp"
            android:transitionName="storyNameDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="30dp"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_new_story">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:transitionName="storyImageDetail"
                tools:src="@tools:sample/backgrounds/scenic" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            style="@style/poppinsBold"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/orange"
            android:outlineSpotShadowColor="@color/transparent"
            android:text="@string/camera"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="@+id/cv_img"
            app:layout_constraintTop_toBottomOf="@+id/cv_img" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            style="@style/poppinsBold"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/orange"
            android:outlineSpotShadowColor="@color/transparent"
            android:text="@string/gallery"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/cv_img"
            app:layout_constraintTop_toBottomOf="@+id/cv_img" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_desc"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="92dp"
            android:backgroundTint="@android:color/transparent"
            android:outlineSpotShadowColor="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_img"
            app:strokeColor="@color/purple"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/edt_description"
                style="@style/poppinsRegular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:hint="@string/story_description"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="8dp"
                android:textColorHint="@color/purple" />
        </com.google.android.material.card.MaterialCardView>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_desc">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                style="@style/poppinsBold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@color/orange"
                android:outlineSpotShadowColor="@color/transparent"
                android:text="@string/upload"
                android:textAllCaps="false"
                app:cornerRadius="10dp" />

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                android:translationZ="5dp"
                android:indeterminateTint="@color/pastelOrange"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>